--- a/src/main/resources/templates/bmi_form.html
+++ b/src/main/resources/templates/bmi_form.html
@@ -6,28 +6,28 @@
     <link href="webjars/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="container">
-    <h1 class="px-3">Form</h1>
+    <h1 class="px-3">BMI</h1>
+
     <form action="#" th:action="@{/bmi}" th:object="${bmi}" method="post">
-        <div class="row"><hr class="mb-0"></div>
-        <div class="row px-3 py-1">
-            <label for="height" class="col-auto col-form-label">Height (cm)</label>
-            <div class="col-auto">
+        <div class="row row-cols-auto px-3 py-1">
+            <label for="height" class="col col-form-label">Height (cm)</label>
+            <div class="col">
                 <input id="height" type="number" th:field="*{height}" class="form-control"  />
             </div>
         </div>
-        <div class="row"><hr class="mb-0"></div>
-        <div class="row px-3 py-1">
-            <label for="height" class="col-auto col-form-label">Weight (kg)</label>
-            <div class="col-auto">
+
+        <div class="row row-cols-auto px-3 py-1">
+            <label for="height" class="col col-form-label">Weight (kg)</label>
+            <div class="col">
                 <input type="number" th:field="*{weight}" class="form-control"  />
             </div>
         </div>
-        <div class="row"><hr class="mb-0"></div>
-        <div class="row px-3 py-1">
-            <div class="col-auto">
+
+        <div class="row row-cols-auto px-3 py-1">
+            <div class="col">
                 <input class="btn btn-primary" type="submit" value="Submit" />
             </div>
-            <div class="col-auto">
+            <div class="col">
                 <input class="btn btn-warning" type="reset" value="Reset" />
             </div>
         </div>
