--- a/src/main/resources/templates/bmi_result.html
+++ b/src/main/resources/templates/bmi_result.html
@@ -6,21 +6,27 @@
     <link href="webjars/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="container">
-    <h1>BMI</h1>
+    <h1 class="px-3">BMI</h1>
 
-    <div class="row row-cols-auto">
-        <div class="col">Height (cm):</div>
-        <div class="col">
-            <p th:text="${bmi.height}"></p>
-        </div>
-    </div>
-    <div class="row row-cols-auto">
-        <div class="col">Weight (kg):</div>
-        <div class="col">
-            <p th:text="${bmi.weight}"></p>
-        </div>
+    <div class="row row-cols-auto px-3 py-1">
+        <div class="col col-form-label">Height (cm):</div>
+        <div class="col col-form-label" th:text="${bmi.height}"></div>
     </div>
 
-    <a class="btn btn-primary" href="/bmi">Again</a>
+    <div class="row row-cols-auto px-3 py-1">
+        <div class="col col-form-label">Weight (kg):</div>
+        <div class="col col-form-label" th:text="${bmi.weight}"></div>
+    </div>
+
+    <div class="row row-cols-auto px-3 py-1">
+        <div class="col col-form-label">BMI:</div>
+        <div class="col col-form-label" th:text="${bmi.bmi}"></div>
+    </div>
+
+    <div class="row row-cols-auto px-3 py-1">
+        <div class="col">
+            <a class="btn btn-primary" href="/bmi">Again</a>
+        </div>
+    </div>
 </body>
 </html>
