Use the result page

--- a/src/main/resources/templates/bmi_result.html
+++ b/src/main/resources/templates/bmi_result.html
@@ -7,6 +7,10 @@
 </head>
 <body class="container">
     <h1 class="px-3">BMI</h1>
+    <h3 class="px-3">
+        Count
+        <th:block th:text="${@bmi.count}"></th:block>
+    </h3>
 
     <div class="row row-cols-auto px-3 py-1">
         <div class="col col-form-label">Height (cm):</div>
@@ -25,6 +29,7 @@
 
     <div class="row row-cols-auto px-3 py-1">
         <div class="col">
+
             <a class="btn btn-primary" href="/bmi">Again</a>
         </div>
     </div>
