Implement session invalidation

--- a/src/main/resources/templates/bmi_form.html
+++ b/src/main/resources/templates/bmi_form.html
@@ -29,10 +29,10 @@
 
         <div class="row row-cols-auto px-3 py-1">
             <div class="col">
-                <input class="btn btn-primary" type="submit" value="Submit" />
+                <button class="btn btn-primary" name="action" type="submit" value="submit">Submit</button>
             </div>
             <div class="col">
-                <input class="btn btn-warning" type="reset" value="Reset" />
+                <button class="btn btn-warning" name="action" type="submit" value="reset">New BMI</button>
             </div>
         </div>
     </form>
