--- a/src/main/resources/templates/bmi_result.html
+++ b/src/main/resources/templates/bmi_result.html
@@ -29,8 +29,13 @@
 
     <div class="row row-cols-auto px-3 py-1">
         <div class="col">
-
             <a class="btn btn-primary" href="/bmi">Again</a>
+        </div>
+        <div class="col">
+            <button class="btn btn-warning"
+                    name="action" type="submit" value="reset"
+                    formaction="/bmi" formmethod="post"
+            >New BMI</button>
         </div>
     </div>
 </body>
